--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
                     <div class="col-sm-12 row mx-auto py-4">
                         <div id="work-title" class="col-sm-12 mb-3">
                             <div id="ck4" class="contents text-right">
-                                <h3 id="editor_title_t2" >Invoice2</h3>
+                                <h3 id="editor_title_t2" >Invoice</h3>
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6 row">
-                            <div class="col-sm-12 col-md-4">
+                            <div class="col-sm-12 col-md-4" style="padding-top: 9px">
                                 <label for="bs_billingto" class="no-label"></label>
                                 <input type="text" class="form-control no-border input_title_sm" id="bs_billingto" placeholder="Billing To: ">
                             </div>
@@ -166,11 +166,19 @@
                     <div class="col-sm-12 row mx-auto py-4">
                         <table  class="table table-bordered resizable" id="table">
                             <thead>
-                            <tr>
-                                <th scope="col">Description</th>
-                                <th scope="col">Quantity</th>
-                                <th scope="col">Unit Price</th>
-                                <th scope="col">Amount</th>
+                                <tr>
+                                <th scope="col">
+                                    <input class="form-control no-border input_title_sm font-weight-bolder" type="text" value="Description" placeholder="Description">
+                                </th>
+                                <th scope="col">
+                                    <input class="form-control no-border input_title_sm font-weight-bolder" type="text" value="Quantity" placeholder="Quantity">
+                                </th>
+                                <th scope="col">
+                                    <input class="form-control no-border input_title_sm font-weight-bolder" type="text" value="Unit Price" placeholder="Unit Price">
+                                </th>
+                                <th scope="col">
+                                    <input class="form-control no-border input_title_sm font-weight-bolder" type="text" value="Amount" placeholder="Amount">
+                                </th>
                                 <th scope="col" class="print_hide"></th>
                             </tr>
                             </thead>
