--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                                 <h3 id="editor_title_t2" >Invoice</h3>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-6 row">
-                            <div class="col-sm-12 col-md-4" style="padding-top: 9px">
+                        <div class="col-sm-12 col-md-5 row">
+                            <div class="col-sm-12 px-0 col-md-4" style="padding-top: 9px">
                                 <label for="bs_billingto" class="no-label"></label>
                                 <input type="text" class="form-control no-border input_title_sm" id="bs_billingto" placeholder="Billing To: ">
                             </div>
@@ -145,7 +145,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="clone_me"  class="col-sm-12 col-md-6 ">
+                        <div id="clone_me"  class="col-sm-12 col-md-4 ml-auto">
                             <div class="row cloned">
                                 <div class="col-sm-6 text-right">
                                     <label for="bs_invoice_no" class="no-label"></label>
