--- a/index.html
+++ b/index.html
@@ -71,15 +71,17 @@
                     <div id="right" class="col-sm-12 row mx-auto header_bottom_boder pb-2">
                         <div class="col-sm-12 col-md-8 px-0 py-0  " >
                             <div id="ck1" class="contents">
-                                <h3>[ Business Name]</h3>
-                                <p>[ Business Address ]</p>
+                                <h3>[ Business Name]</h3><br>
+                                [ Business Address ]<br>
+
                                 <span class="d-flex">
                                     <span>[ City ]</span>
                                     <span>[ State ]</span>
-                                    <span>[ Postal Code ]</span>
-                                </span>
-                                <p>[ Phone Number ]</p>
-                                <p>[ Email Address ]</p>
+                                    <span>[ Postal Code ]</span><br>
+                                </span><br>
+                                [ Phone Number ]<br>
+                                [ Email Address ]
+
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4 pt-3">
@@ -106,15 +108,16 @@
                         </div>
                         <div class="col-sm-12 col-md-5 px-0 py-0  " >
                             <div id="ck2" class="contents w-100">
-                                <h3>[ Business Name]</h3>
-                                <p>[ Business Address ]</p>
+                                <h3>[ Business Name]</h3><br>
+                                [ Business Address ]<br>
+
                                 <span class="d-flex">
                                     <span>[ City ]</span>
                                     <span>[ State ]</span>
-                                    <span>[ Postal Code ]</span>
-                                </span>
-                                <p>[ Phone Number ]</p>
-                                <p>[ Email Address ]</p>
+                                    <span>[ Postal Code ]</span><br>
+                                </span><br>
+                                [ Phone Number ]<br>
+                                [ Email Address ]
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-3">
